--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AugustoHide/SitePessoal#readme",
   "dependencies": {
+    "@ampproject/toolbox-optimizer": "^2.8.4",
     "consolidate": "^0.16.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
