--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "consolidate": "^0.16.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "nodemailer": "^6.7.2",
     "path": "^0.12.7",
     "swig": "^1.4.2"
   }
